--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = {path="../bevy/"}
+bevy = {path="../bevy/", features=["vorbis"]}
 rand = "0.7"
 anyhow = "1.0"
 uuid = "0.8"
