--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 default = [
     "audio",
     "render",
+    "wasm",
 ]
 wasm = []
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
@@ -25,5 +26,7 @@ log = "0.4"
 console_error_panic_hook = "0.1.6"
 console_log = { version = "0.2", features = ["color"] }
 wasm-bindgen = "0.2.68"
+web-sys = {version="0.3.45", features=["Document", "Window", "EventTarget", "EventListener", "KeyboardEvent", "Event", "CustomEvent", "CustomEventInit"]}
+wasm-timer = "0.2.5"
 [profile.dev]
 opt-level = 1
