--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,10 @@ default = [
 ]
 wasm = []
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
-render = ["bevy/bevy_wgpu", "bevy/bevy_winit", "bevy/render", "bevy/x11", "bevy/png"]
+render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11", "bevy/png"]
 
 [dependencies]
-bevy = {path="../bevy/", default-features = false, features=[]}
+bevy = {path="../bevy/", default-features = false, features=["bevy_winit"]}
 rand = "0.7"
 anyhow = "1.0"
 uuid = "0.8"
