--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ audio = ["bevy/bevy_audio", "bevy/vorbis"]
 render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11", "bevy/png"]
 
 [dependencies]
-bevy = {path="../bevy/", default-features = false, features=["bevy_winit"]}
+bevy = {path="../bevy/", default-features = false, features=["bevy_winit", "bevy_render", "bevy_sprite"]}
 rand = "0.7"
 anyhow = "1.0"
 uuid = "0.8"
