--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,48 @@
 [package]
-name = "bevy-robbo"
-version = "0.1.0"
 authors = ["Mariusz Kryński <mrk@sed.pl>"]
 edition = "2018"
+name = "bevy-robbo"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = [
-    "audio",
-    "render",
-]
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
-render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11", "bevy/png"]
+default = [
+  "audio",
+  "render",
+]
+render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11"]
 
 [dependencies]
-bevy = {path="../bevy/", default-features = false, features=["bevy_winit", "bevy_render", "bevy_sprite"]}
-rand = "0.7"
 anyhow = "1.0"
-uuid = "0.8"
-structopt = "0.3"
-env_logger = "0.7"
+bevy = {path = "../bevy/", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_sprite", "png"]}
 log = "0.4"
+rand = "0.7"
+structopt = "0.3"
+uuid = "0.8"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = "0.7"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = {version = "0.2", features = ["color"]}
 console_error_panic_hook = "0.1.6"
-console_log = { version = "0.2", features = ["color"] }
 wasm-bindgen = "0.2.68"
-web-sys = {version="0.3.45", features=["Document", "Window", "EventTarget", "EventListener", "KeyboardEvent", "Event", "CustomEvent", "CustomEventInit"]}
 wasm-timer = "0.2.5"
+js-sys = "0.3.45"
+web-sys = {version = "0.3.45", features = [
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'WebGlBuffer',
+  'WebGlRenderingContext',
+  'WebGl2RenderingContext',
+  'WebGlProgram',
+  'WebGlShader',
+  'Window',
+  'WebGlTexture',
+  'WebGlUniformLocation',
+]}
+
 [profile.dev]
 opt-level = 1
