fixes for bevy_webgl2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,25 +6,29 @@ version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-audio = ["bevy/bevy_audio", "bevy/vorbis"]
 default = [
-  "audio",
-  "render",
+  "native",
+  # "webgl-plugin",
+  # "bevy/bevy_webgl2",
 ]
-render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11"]
+audio = ["bevy/bevy_audio", "bevy/vorbis"]
+native = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11", "bevy/bevy_audio", "bevy/vorbis"]
+webgl-plugin = []
 
 [dependencies]
-bevy = {path = "../bevy/", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_sprite", "png"]}
 anyhow = "1.0"
 log = "0.4"
 rand = "0.7"
 structopt = "0.3"
 uuid = "0.8"
+# wasm-tracing-allocator = {version = "0.1.1"}
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+bevy = {path = "../bevy/", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_sprite", "png"]}
 env_logger = "0.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+bevy = {path = "../bevy/", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_sprite", "png", "bevy_text", "bevy_ui"]}
 console_log = {version = "0.2", features = ["color"]}
 console_error_panic_hook = "0.1.6"
 wasm-bindgen = "0.2.68"
