--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = [
-  # "native",
-  "webgl-plugin",
+  "native",
+  # "webgl-plugin",
   # "bevy/bevy_webgl2",
 ]
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
