--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,26 +7,35 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 default = [
-  "native",
+  "bevy/bevy_gltf",
+  "bevy/bevy_winit",
+  "bevy/render",
+  "bevy/png",
 ]
+
+native = [
+  "bevy/bevy_wgpu",
+]
+
+web = [
+  "bevy_webgl2"
+]
+
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
-native = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11"]
-webgl-plugin = []
 
 [dependencies]
-bevy = {git = "https://github.com/bevyengine/bevy", branch="master", default-features=false, features=["bevy_winit", "render", "bevy_gltf", "png"]}
+bevy = {git = "https://github.com/bevyengine/bevy", default-features=false}
+bevy_webgl2 = {path = "../bevy_webgl2", default-features = false, optional=true}
+winit = {version = "0.23.0", features = ["web-sys", "x11"], default-features = false}
 anyhow = "1.0"
 rand = "0.7"
 structopt = "0.3"
 uuid = "0.8"
 # wasm-tracing-allocator = {version = "0.1.1"}
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2"}
-
 
 [patch.'https://github.com/bevyengine/bevy']
-bevy = {git = "https://github.com/bevyengine/bevy.git//", branch="master", default-features=false, features=["bevy_winit", "render", "bevy_gltf", "png"]}
+bevy = {git = "https://github.com/mrk-its/bevy", branch="instant", default-features=false}
 
 [profile.dev]
 opt-level = 1
