--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ audio = ["bevy/bevy_audio", "bevy/vorbis"]
 render = ["bevy/bevy_wgpu", "bevy/render", "bevy/x11", "bevy/png"]
 
 [dependencies]
-bevy = {path="../bevy/", default-features = false, features=["bevy_winit"]}
+bevy = {git="https://github.com/bevyengine/bevy", rev="22a2c88a476c85dcd23f19b25d5ac3f517d59edb", default-features = false, features=["bevy_winit"]}
 rand = "0.7"
 anyhow = "1.0"
 uuid = "0.8"
@@ -23,6 +23,7 @@ env_logger = "0.7"
 log = "0.4"
 console_error_panic_hook = "0.1.6"
 console_log = { version = "0.2", features = ["color"] }
+winit = {version = "0.23.0", features = ["web-sys", "x11"], default-features = false}
 wasm-bindgen = "0.2.68"
 web-sys = {version="0.3.45", features=["Document", "Window", "EventTarget", "EventListener", "KeyboardEvent", "Event", "CustomEvent", "CustomEventInit"]}
 wasm-timer = "0.2.5"
