--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,15 @@ native = [
   "bevy/bevy_wgpu",
 ]
 
-web = [
-  "bevy_webgl2"
-]
+# web = [
+#   "bevy_webgl2"
+# ]
 
 audio = ["bevy/bevy_audio", "bevy/vorbis"]
 
 [dependencies]
 bevy = {git = "https://github.com/bevyengine/bevy", default-features=false}
-bevy_webgl2 = {path = "../bevy_webgl2", default-features = false, optional=true}
+# bevy_webgl2 = {path = "../bevy_webgl2", default-features = false, optional=true}
 winit = {version = "0.23.0", features = ["web-sys", "x11"], default-features = false}
 anyhow = "1.0"
 rand = "0.7"
@@ -35,7 +35,7 @@ uuid = "0.8"
 
 
 [patch.'https://github.com/bevyengine/bevy']
-bevy = {git = "https://github.com/mrk-its/bevy", branch="instant", default-features=false}
+bevy = { git = "https://github.com/TheRawMeatball/bevy", branch = "discovered-system", default-features=false }
 
 [profile.dev]
 opt-level = 1
