--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,26 +1,36 @@
 [env]
 ENV_DIR = {source="${CARGO_MAKE_PROFILE}", default_value = "debug", mapping = {release = "release"}}
+TARGET_DIR = "target"
+CARGO_TARGET_DIR = {value = "${TARGET_DIR}", condition = {env_not_set = ["CARGO_TARGET_DIR"]}}
 CARGO_WASM_PATH = "${CARGO_TARGET_DIR}/wasm32-unknown-unknown/${ENV_DIR}/${CARGO_MAKE_CRATE_NAME}.wasm"
 CARGO_PROFILE = "dev"
-CARGO_TARGET_DIR = {source = "${CARGO_TARGET_DIR}", default_value = "target"}
-TARGET_DIR = "target"
 CARGO_MANIFEST_DIR = "${CARGO_MAKE_WORKING_DIRECTORY}"
 
 [env.release]
 CARGO_RELEASE_ARGS = "--release"
 
-[tasks.show-env]
+[tasks.env]
 command = "env"
+
+[tasks.install-wasm-target]
+args = ["target", "install", "wasm32-unknown-unknown"]
+command = "rustup"
+
+[tasks.install-wasm-bindgen-cli]
+install_crate = {crate_name = "wasm-bindgen-cli", binary = "wasm-bindgen", test_arg="--help"}
+
+[tasks.install-basic-http-server]
+install_crate = {crate_name = "basic-http-server", binary = "basic-http-server", test_arg="--help"}
 
 [tasks.cargo-build-web]
 args = ["build", "--target", "wasm32-unknown-unknown", "--features", "web", "@@split(CARGO_RELEASE_ARGS, )"]
 command = "cargo"
-dependencies = ["show-env"]
+dependencies = ["env", "install-wasm-target"]
 
 [tasks.build-web]
 args = ["--out-dir", "${TARGET_DIR}", "--out-name", "wasm", "--target", "web", "--no-typescript", "${CARGO_WASM_PATH}"]
 command = "wasm-bindgen"
-dependencies = ["cargo-build-web"]
+dependencies = ["cargo-build-web", "install-wasm-bindgen-cli"]
 
 [tasks.build-native]
 args = ["build", "--features", "native", "@@split(CARGO_RELEASE_ARGS, )"]
@@ -32,7 +42,7 @@ dependencies = ["build-native"]
 
 [tasks.serve]
 command = "basic-http-server"
-dependencies = ["build-web"]
+dependencies = ["build-web", "install-basic-http-server"]
 
 [tasks.test]
 disabled = true
